Prevent overlap between global nav items and burger icon

--- a/common/app/assets/stylesheets/module/nav/_nav.scss
+++ b/common/app/assets/stylesheets/module/nav/_nav.scss
@@ -118,7 +118,12 @@
         padding: 0 $gs-gutter
     ));
 
-    @include mq(tablet) { display: block; }
+    @include mq(tablet) {
+        display: block;
+        @include rem((
+            padding-right: gs-span(1)
+        ));
+    }
 
     .nav__item {
         position: relative;
